--- a/final-project.ipynb
+++ b/final-project.ipynb
@@ -495,7 +495,7 @@
         "id": "OIxSmfSGZjg1"
       },
       "source": [
-        "# PreProcessing data for K-cross Validation"
+        "# PreProcessing data for K-Fold cross Validation"
       ]
     },
     {
